force-app/main/default/objects/Content_Post_Photo__c/Content_Post_Photo__c.object-meta.xml
<CustomObject>
    <description
  >Stores photo attachments for trip reports, including caption, credit, consent, and order metadata (plan §1.A).</description>
    <label>Content Post Photo</label>
    <nameField>
        <displayFormat>CPP-{00000000}</displayFormat>
        <label>Content Post Photo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Post Photos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>