force-app/main/default/objects/Content_Post_Photo__c/fields/Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Alt_Text__c</fullName>
    <description
  >Alt text description of the image for accessibility (required).</description>
    <label>Alt Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>