force-app/main/default/objects/Content_Post_Photo__c/fields/Aspect_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Aspect_Ratio__c</fullName>
    <description>Aspect ratio of the image (e.g. 16:9, 4:3).</description>
    <label>Aspect Ratio</label>
    <length>10</length>
    <type>Text</type>
</CustomField>