force-app/main/default/objects/Content_Post_Photo__c/fields/Caption__c.field-meta.xml
<CustomField>
    <fullName>Caption__c</fullName>
    <description>Image caption.</description>
    <label>Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>