force-app/main/default/objects/Content_Post_Photo__c/fields/Consent_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Consent_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checks if the author has consent to publish photos containing identifiable people.</description>
    <label>Consent Confirmed</label>
    <type>Checkbox</type>
</CustomField>