force-app/main/default/objects/Content_Post_Photo__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <description>The associated Salesforce ContentDocument ID.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>