force-app/main/default/objects/Content_Post_Photo__c/fields/Content_Post__c.field-meta.xml
<CustomField>
    <fullName>Content_Post__c</fullName>
    <description>The parent content post (master).</description>
    <label>Content Post</label>
    <referenceTo>Content_Post__c</referenceTo>
    <relationshipLabel>Photos</relationshipLabel>
    <relationshipName>Photos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>