force-app/main/default/objects/Content_Post_Photo__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <description>Photographer credit.</description>
    <label>Credit</label>
    <length>120</length>
    <type>Text</type>
</CustomField>