force-app/main/default/objects/Content_Post_Photo__c/fields/Public_Url__c.field-meta.xml
<CustomField>
    <fullName>Public_Url__c</fullName>
    <description
  >CDN cached URL mapping to ContentDistribution token for guest visitors.</description>
    <label>Public Url</label>
    <type>Url</type>
</CustomField>